# tap-googleads

./: pyproject.toml  tox.ini
.github/workflows/: ci.yml
